<resources>
    <string name="app_name">SenseHat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_leds">Leds</string>
    <string name="menu_charts">Charts</string>
    <string name="menu_data">Data</string>
    <string name="menu_options">Options</string>

</resources>