<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_leds"
            android:icon="@drawable/matrix"
            android:title="@string/menu_leds" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/chart"
            android:title="@string/menu_charts" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/data"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/settings"
            android:title="@string/menu_options" />
    </group>
</menu>